--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -1003,133 +1003,133 @@ in the collected charge in the edge region.
 
 
 
-\newpage
-\section{Results temp}
+%% \newpage
+%% \section{Results temp}
 
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=3]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=6]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=9]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=12]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp}
-\end{figure}
+%% \begin{figure}[htbp]
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=3]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=6]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=9]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=12]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}
+%%   \caption{}
+%%   \label{fig:ResultsTemp}
+%% \end{figure}
 
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=5]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=8]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=11]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=14]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp2}
-\end{figure}
+%% \begin{figure}[htbp]
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=5]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=8]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=11]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=14]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}
+%%   \caption{}
+%%   \label{fig:ResultsTemp2}
+%% \end{figure}
 
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_20_NGR.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
+%% \begin{figure}[htbp]
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_20_NGR.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
 
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_28_GNDGR.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp3}
-\end{figure}
-
-
-%%%%%%%%%%%%%%%%%%%%
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=15]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=18]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp4}
-\end{figure}
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=17]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=20]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp5}
-\end{figure}
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR_100.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR_150.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp6}
-\end{figure}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_28_GNDGR.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.24\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR.pdf}
+%%   \caption{}
+%%   \end{subfigure}
+%%   \caption{}
+%%   \label{fig:ResultsTemp3}
+%% \end{figure}
 
 
+%% %%%%%%%%%%%%%%%%%%%%
+%% \begin{figure}[htbp]
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=15]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=18]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}
+%%   \caption{}
+%%   \label{fig:ResultsTemp4}
+%% \end{figure}
 
+%% \begin{figure}[htbp]
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=17]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth, page=20]{figures/TestBeam/edge_bcp.pdf}
+%%   \caption{}
+%%   \end{subfigure}
+%%   \caption{}
+%%   \label{fig:ResultsTemp5}
+%% \end{figure}
+
+%% \begin{figure}[htbp]
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR_100.pdf}
+%%   \caption{}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \centering
+%%     \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR_150.pdf}
+%%   \caption{}
+%%   \end{subfigure}
+%%   \caption{}
+%%   \label{fig:ResultsTemp6}
+%% \end{figure}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \begin{figure}[htbp]
 %   \centering
 %   \begin{minipage}[t]{.4\textwidth}
