[Telescope] implementation of the telescope chapter

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -516,3 +516,14 @@ author = "F. Krummenacher",
       title          = "Advacam sensor wafer fabrication",
       url            = "http://www.advacam.com/en/services/sensor-wafer-fabrication"
 }
+
+@article{Zarnecki:2007yu,
+      author         = "Zarnecki, A. F. and Niezurawski, P.",
+      title          = "{EUDET Telescope Geometry and Resolution Studies}",
+      year           = "2007",
+      eprint         = "physics/0703058",
+      archivePrefix  = "arXiv",
+      primaryClass   = "PHYSICS",
+      reportNumber   = "EUDET-REPORT-2007-01",
+      SLACcitation   = "%%CITATION = PHYSICS/0703058;%%"
+}
