--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -3,31 +3,31 @@
 \label{ch:ThinSensorsStudies}
 % ==============================================================================    
 
-The aim of the CLIC vertex detector is the precise determination of
-the displaced vertices and jet flavour-tagging in an environment with
-high occupancy from beam-induced backgrounds. Multi-layer barrel and
-endcap pixel detectors with geometrical coverage extending down to low
-polar angles ($\theta_{min}\sim8^{\circ}$) are foreseen to fulfill
-these requirements. The goal is to achieve a single-point resolution
-of $\sim 3\,\micron$ with $25\,\micron$ pixel pitch and analogue
-readout. A material budget of $\sim0.2\%$~X\textsubscript{0} per layer
-is required including readout, support and cabling. This can be
-achieved with $50\,\micron$ thick sensors on $50\,\micron$ thick
-readout ASICs.
+% The aim of the CLIC vertex detector is the precise determination of
+% the displaced vertices and jet flavour-tagging in an environment with
+% high occupancy from beam-induced backgrounds. Multi-layer barrel and
+% endcap pixel detectors with geometrical coverage extending down to low
+% polar angles ($\theta_{min}\sim8^{\circ}$) are foreseen to fulfill
+% these requirements. The goal is to achieve a single-point resolution
+% of $\sim 3\,\micron$ with $25\,\micron$ pixel pitch and analogue
+% readout. A material budget of $\sim0.2\%$~X\textsubscript{0} per layer
+% is required including readout, support and cabling. This can be
+% achieved with $50\,\micron$ thick sensors on $50\,\micron$ thick
+% readout ASICs.
 
 As part of the R\&D programme for the CLIC vertex detector, the
 performance of thin silicon sensors is quantified using the Timepix3
 readout chip with $55\,\micron$ pixel pitch. $50\,\micron$ to
-$300\,\micron$ thick planar sensors are bump-bonded to $700\,\micron$
+$300\,\micron$ thick planar sensors are bump-bonded to $750\,\micron$
 thick Timepix3 ASICs. These assemblies are tested in test beams and
 the data are used to validate the AllPix \textsc{Geant4}-based
 simulations. The simulation is finally extrapolated for smaller pixels
-of $25\,\micron$ pixel pitch.
+of $25\,\micron$ pitch.
 
 %% --------------------------------------------- %%
 \section{Thin-sensor assemblies}
 A summary of thin sensors ($50-300\,\micron$ thick) bump-bonded to the
-Timepix3 readout ASICs is shown in
+CLICdp Timepix3 readout ASICs is shown in
 \cref{tab:Timepix3Assemblies}. These assemblies are tested using the
 Timepix3 pixel beam reference telescope at the CERN SPS with the
 experimental setup as described in \cref{sec:CERN_SPS}.
@@ -53,17 +53,17 @@ the bias voltages are scanned.
     \cref{sec:thresholdCalibration}) for the tested assemblies as
     shown in \cref{tab:Timepix3Assemblies}.}
   \label{tab:nominalBiasThreshold}
-  \begin{tabular}{lccc}
+  \begin{tabular}{lcccc}
     \toprule
-    Timepix3 ID & Bias voltage [V] & Threshold [DAC] & Threhsold [e\textsuperscript{-}]\\
+    Timepix3 ID & Thickness [$\micron$] & Bias voltage [V] & Threshold [DAC] & Threshold [e\textsuperscript{-}]\\
     \midrule
-    W19\_G7 & -15 & 1190 & $526.230\pm0.649$ \\
-    W19\_F7 & -15 & 1187 & $600.406\pm0.551$ \\
-    W19\_L8 & -15 & 1133 & $568.506\pm0.538$ \\
-    W19\_C7 & -15 & 1148 & $608.700\pm0.488$ \\ \hline
-    W5\_E2 & -20 & 1160 & $561.019\pm0.712$ \\ \hline
-    W5\_F1 & -30 & 1153 & $554.885\pm0.493$ \\ \hline
-    W2\_J5 & 100 & 1170 & $565.723\pm1.560$ \\
+    W19\_G7 & 50 & -15 & 1190 & $526.230\pm0.649$ \\
+    W19\_F7 & 50 & -15 & 1187 & $600.406\pm0.551$ \\
+    W19\_L8 & 50 & -15 & 1133 & $568.506\pm0.538$ \\
+    W19\_C7 & 50 & -15 & 1148 & $608.700\pm0.488$ \\ \hline
+    W5\_E2 & 100 & -20 & 1160 & $561.019\pm0.712$ \\ \hline
+    W5\_F1 & 150 & -30 & 1153 & $554.885\pm0.493$ \\ \hline
+    W2\_J5 & 300 & 100 & 1170 & $565.723\pm1.560$ \\
     \bottomrule
   \end{tabular}
 \end{table}
@@ -82,6 +82,71 @@ the bias voltages are scanned.
 % For most of the measurements, the DUT is perpendicular to the beam. A
 % scan was done on the bias voltage and the threshold of the DUT. The
 % bias scan allows to obtain the depletion voltage.
+
+%% --------------------------------------------- %%
+\section{Calibrated test beam data}
+
+The test pulse calibration as described in
+\cref{sec:EnergyCalibration} is applied to the test beam data in order
+to convert the TOT values into energy deposited (in electrons) by the
+MIP particles.
+
+
+\cref{sec:testBeamDataCalibrated_TOT} shows the TOT distribution for
+one, two, three and four-pixel clusters. The MPV of the TOT
+distributions for different cluster sizes do not align due to the
+non-linear behaviour of the Timepix3, as sharing the same deposited
+charge amongst several pixels results in each pixel having a higher
+TOT than would be expected from simply scaling the charge. The
+calibrated energy distribution aligns for different cluster sizes
+since the calibration takes into account the non-linearities of the
+chip as shown in \cref{sec:testBeamDataCalibrated_Edep}. For the
+$50\,\micron$ thick sensor, the calibrated distributions do not
+align. This is due to the low energy deposition in thin sensors
+especially for multi-pixel clusters where the energy deposition per
+pixel is close to the threshold.
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_C07.pdf}
+    \caption{W19\_C7}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_E02.pdf}
+    \caption{W5\_E2}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_F01.pdf}
+    \caption{W5\_F1}
+  \end{subfigure}
+  \caption{TOT distribution for one, two, three and four-pixel
+    clusters for various assemblies with (a) $50\,\micron$, (b)
+    $100\,\micron$ and (c) $150\,\micron$ thick planar sensors.}
+  \label{sec:testBeamDataCalibrated_TOT}
+\end{figure}
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_C07.pdf}
+    \caption{W19\_C7}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_E02.pdf}
+    \caption{W5\_E2}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_F01.pdf}
+    \caption{W5\_F1}
+  \end{subfigure}
+  \caption{Energy deposition distribution for one, two, three and
+    four-pixel clusters for various assemblies with (a) $50\,\micron$,
+    (b) $100\,\micron$ and (c) $150\,\micron$ thick planar sensors.}
+  \label{sec:testBeamDataCalibrated_Edep}
+\end{figure}
+
+For all assemblies, the energy deposition in electrons is given in
+\cref{sec:appendixCalibDataG4}.
+
 
 %% --------------------------------------------- %%
 \section{Experimental results for thin sensors}
@@ -344,7 +409,7 @@ residuals in the x and y directions for a $50\,\micron$ thick sensor
 threshold. For other assemblies, these plots are shown in
 \cref{fig:Residuals_vs_biasVoltage,fig:Residuals_vs_Threshold}. The
 residuals follow the same trend as the cluster size distributions:
-higher fractions of single-hit clusters result in higher residuals.
+higher fractions of single-pixel clusters result in higher residuals.
 
 
 \begin{figure}[htbp] \centering
@@ -437,70 +502,6 @@ increasing the threshold than for thick sensors.
 \end{figure}
 
 
-
-%% --------------------------------------------- %%
-\section{Calibrated test beam data}
-
-The test pulse calibration as described in
-\cref{sec:EnergyCalibration} is applied to the test beam data in order
-to convert the TOT values into energy deposited (in electrons) by the
-MIP particles.
-
-
-\cref{sec:testBeamDataCalibrated_TOT} shows the TOT distribution for
-one, two, three and four-hit clusters. The MPV of the TOT
-distributions for different cluster sizes do not align due to the
-non-linear behaviour of the Timepix3, as sharing the same deposited
-charge amongst several pixels results in each pixel having a higher
-TOT than would be expected from simply scaling the charge. The
-calibrated energy distribution aligns for different cluster sizes
-since the calibration takes into account the non-linearities of the
-chip as shown in \cref{sec:testBeamDataCalibrated_Edep}. For the
-$50\,\micron$ thick sensor, the calibrated distributions do not
-align. This is due to the low energy deposition in thin sensors
-especially for multi-hit clusters where the energy deposition per
-pixel is close to the threshold.
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_C07.pdf}
-    \caption{W19\_C7}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_E02.pdf}
-    \caption{W5\_E2}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_F01.pdf}
-    \caption{W5\_F1}
-  \end{subfigure}
-  \caption{TOT distribution for one, two, three and four-hit clusters
-    for various assemblies with (a) $50\,\micron$, (b) $100\,\micron$
-    and (c) $150\,\micron$ thick planar sensors.}
-  \label{sec:testBeamDataCalibrated_TOT}
-\end{figure}
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_C07.pdf}
-    \caption{W19\_C7}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_E02.pdf}
-    \caption{W5\_E2}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_F01.pdf}
-    \caption{W5\_F1}
-  \end{subfigure}
-  \caption{Energy deposition distribution for one, two, three and
-    four-hit clusters for various assemblies with (a) $50\,\micron$,
-    (b) $100\,\micron$ and (c) $150\,\micron$ thick planar sensors.}
-  \label{sec:testBeamDataCalibrated_Edep}
-\end{figure}
-
-For all the assemblies, the energy deposition in electrons is given in
-\cref{sec:appendixCalibDataG4}.
 
 
 %% --------------------------------------------- %%
@@ -599,7 +600,7 @@ the performance of smaller pixel pitches.
 \end{figure}
 
 %% --------------------------------------------- %%
-\section{Extrapolation to smaller pixels (CLICpix)}
+\section{Extrapolation to smaller pixels}
 
 Figure~\ref{fig:cluSize25Pitch} shows the cluster-size distribution
 and the hit residuals for an extrapolation of the simulation to
@@ -617,7 +618,7 @@ resolution) is still significantly worse than the required
 $3\,\micron$. It can be concluded that the required resolution can be
 either obtained with smaller pixels using planar sensors or new
 solution of charge sharing are needed in order to reduce even more the
-number of single-hit clusters. By tilting the detectors, the charge
+number of single-pixel clusters. By tilting the detectors, the charge
 sharing could be as well optimised.
 
 \begin{figure}[htbp]\centering
